# MicAndMaster

./: CMakeLists.txt  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/example/micandmaster/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioProcessor.cpp  AudioProcessor.h  native_lib.cpp
app/src/main/java/com/example/micandmaster/: EditorActivity.java  LoadExistingActivity.java  MainActivity.java  RecordActivity.java  WaveFormView.java
app/src/main/java/com/example/micandmaster/Util/: FileUtilities.java
app/src/main/java/com/example/micandmaster/audio/: Audio.java  WaveForm.java  WaveFormCalc.java
app/src/main/java/com/example/micandmaster/audio/effects/: Effect.java
app/src/main/java/com/example/micandmaster/db/: AudioDao.java  AudioDatabase.java  AudioEntity.java  AudioRepository.java  AudioViewModel.java
app/src/main/res/layout/: activity_editor.xml  activity_load_existing.xml  activity_main.xml  activity_record.xml  content_editor.xml  content_main.xml  content_record.xml  save_as_window.xml  wave_form_view.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs_wave_form_view.xml  colors.xml  ids.xml  strings.xml
app/src/test/java/com/example/micandmaster/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
